# holdify

./: .gitignore  Anchor.toml  Cargo.toml  README.md  holdify-grand-design.md  holdify-pst-track.md  holdify-sol-track.md  package-lock.json  package.json  rtk.config.toml  tsconfig.json
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/analytics/: page.tsx
app/src/app/api-keys/: page.tsx
app/src/app/chat/: page.tsx
app/src/app/credits/: page.tsx
app/src/app/sol/: page.tsx
app/src/app/sol/deposit/: page.tsx
app/src/components/: Header.tsx  SolanaProvider.tsx
crank/: package-lock.json  package.json  tsconfig.json
crank/src/: main.ts
facilitator/: .env.example  package.json
facilitator/src/: index.ts
holdify-protocol/: Anchor.toml
holdify-protocol/programs/holdify-protocol/: Cargo.toml
holdify-protocol/programs/holdify-protocol/src/: lib.rs
holdify-protocol/tests/: holdify-protocol.ts
migrations/: deploy.js
programs/credit-ledger/: Cargo.toml
programs/credit-ledger/src/: lib.rs
programs/holdify-sol-vault/: Cargo.toml
programs/holdify-sol-vault/src/: lib.rs
programs/holdify-treasury/: Cargo.toml
programs/holdify-treasury/src/: lib.rs
programs/lst-registry/: Cargo.toml
programs/lst-registry/src/: lib.rs
scripts/: setup-rtk.sh
tests/: holdify.ts
