[workspace]
members = [
    "programs/lst-registry",
    "programs/credit-ledger",
    "programs/holdify-treasury",
    "programs/holdify-sol-vault",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
