[package]
name = "holdify-sol-vault"
version = "0.1.0"
description = "Holdify SOL Track vault — LST deposit, epoch harvest, Jupiter swap, AI credit funding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holdify_sol_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
