[package]
name = "holdify-treasury"
version = "0.1.0"
description = "Holdify shared treasury — USDC pool, fee collection, facilitator settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holdify_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
