[package]
name = "lst-registry"
version = "0.1.0"
description = "Holdify LST metadata registry — tracks supported LSTs and their exchange rate logic"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lst_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
